Lesson 3 final commit

--- a/Lesson3_Highlights_/index.html
+++ b/Lesson3_Highlights_/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>INSERT YOUR NAME</title>
+    <title>Heather Kostrna</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,19 +39,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#topic1">Highlight #1</a>
+                        <a href="#topic1">Versioning</a>
                     </li>
                     <li>
-                        <a href="#topic2">Hightlight #2</a>
+                        <a href="#topic2">Version Control Systems</a>
                     </li>
                     <li>
-                        <a href="#topic3">Hightlight #3</a>
+                        <a href="#topic3">GIT</a>
                     </li>
                     <li>
-                        <a href="#topic4">Hightlight #4</a>
+                        <a href="#topic4">Stages of GIT</a>
                     </li>
                     <li>
-                        <a href="#topic5">Hightlight #5</a>
+                        <a href="#topic5">GIT Commands</a>
                     </li>
                 </ul>
             </div>
@@ -65,7 +65,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Heather Kostrna</h3>
             </div>
         </div>
     </header>
@@ -77,55 +77,55 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/versioncontrol.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Versioning</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">This is a method of file keeping that saves versions or modified files as separate files. Each version is typically given a different name or designation and then can be used to restore a project, file, image, or document to a previous save point by loading that version of the file. This can be done locally by a user by creating multiple saves on a hard drive, for example, document_1, document_2, etc., but this can become cluttered or confusing. You can also utilize a VCS or versioning control system and have it save several versions of a document for you. This option is usually much easier to use and often has several benefits described in the next section.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/mercurial.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">Version Control System</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Also known as a VCS, revision control service (RCS), or source control management (SCM). This is a service or system that will control versioning for you. There are several benefits to using this service including the ability to work more effectively with a team. VCS’s allow you to check a document or project out in order to make changes, commit changes, and ensure that a previous version is saved in case of an emergency, crash, or changes made that were not approved. Examples of these programs include SharePoint by Microsoft, which allows for full site management with versioning settings, PerForce, and GIT.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/git.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">GIT</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Created by Linux kernel in 2005 in response to the breakdown of BitKeeper. GIT is a specific versioning system that is used by many major corporations such as Google, Netflix, and Microsoft. It is a DVCS or distributed versioning control system, which means that each person has a full copy of all the files on their local computer, and that there is no single point of failure in the event of a crash. Most VCS programs save versions as a map of changes to the document, whereas GIT saves snapshots of the versions and instead creates a link to the previous version of a file instead of creating an entirely new saved version of the file. </p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/stages.png">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">Three States of GIT</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git has three stages in which your data can be stored. These are known as: staged, modified, and committed. Staged means you have marked the file that has been modified and it is awaiting its snapshot. You can have several staged versions of a file awaiting committal. Modified means that the document or project has been changed, but not saved to the database. Committed means that a document has been stored to the local database in which you choose to save these files. Even though you would typically first modify a file, then stage it, and finally commit it, it is possible to skip steps and go straight to committing a file. </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/command.png">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">GIT Commands</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git runs very similarly to a command prompt on your PC. Git does not automatically track or ignore changes to documents, but you must tell it to do so using commands. Each command tells Git to perform a specific action. For example, if you want to see which files have been modified, then you would type git status into Git, and the system will run the command and display the desired information. Other commands include git add, which is a multi-purpose command that essentially says whatever you mark with this command will be committed in the next commit function, and .gitignore, which will tell git to ignore files meeting certain described patterns. </p>
         </div>
 
         <hr class="featurette-divider">
